// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/TextInput/TextInput.tools.svelte: Default 1`] = `
<span
  class="inline-block w-64 svelte-1aipfg4"
>
  <span
    class="svelte-x75l88"
  >
     
    <input
      class="svelte-x75l88"
      placeholder=""
      type="text"
    />
  </span>
</span>
`;

exports[`Toolshot components/TextInput/TextInput.tools.svelte: With icon and placeholder 1`] = `
<span
  class="inline-block w-64 svelte-1aipfg4"
>
  <span
    class="svelte-x75l88 icon"
  >
    <i
      class="material-icons svelte-x75l88"
    >
      search
    </i>
     
    <input
      class="svelte-x75l88"
      placeholder="search..."
      type="search"
    />
  </span>
</span>
`;

exports[`Toolshot components/TextInput/TextInput.tools.svelte: With value 1`] = `
<span
  class="inline-block w-64 svelte-1aipfg4"
>
  <span
    class="svelte-x75l88 icon"
  >
    <i
      class="material-icons svelte-x75l88"
    >
      person
    </i>
     
    <input
      class="svelte-x75l88"
      placeholder=""
      type="text"
    />
  </span>
</span>
`;
